--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "googleapis": "^167.0.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
