--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.16.16",
     "googleapis": "^167.0.0",
     "lucide-react": "^0.294.0",
+    "pdfjs-dist": "^5.4.624",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.7",
     "react-dom": "^18.2.0",
